--- a/GUI_forslag/gui.fxml
+++ b/GUI_forslag/gui.fxml
@@ -18,23 +18,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
-<VBox id="VBox" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox id="VBox" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxapplication2.FXMLDocumentController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
             <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem mnemonicParsing="false" text="Open…" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
-            <MenuItem mnemonicParsing="false" text="Revert" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" text="Quit" />
           </items>
@@ -65,7 +57,7 @@
     </MenuBar>
     <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
-        <AnchorPane>
+        <AnchorPane prefHeight="551.0" prefWidth="207.0">
           <children>
             <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Master" textAlignment="CENTER" wrapText="false">
               <font>
@@ -75,38 +67,35 @@
                 <Color blue="0.624" green="0.624" red="0.624" fx:id="x2" />
               </textFill>
             </Label>
-                  <Button layoutX="20.0" layoutY="77.0" mnemonicParsing="false" text="Search by title" />
+                  <Button fx:id="titleBtn" layoutX="20.0" layoutY="77.0" mnemonicParsing="false" onAction="#searchByTitle" text="Search by title" />
                   <TextField layoutX="18.0" layoutY="41.0" promptText="Text to use for search.." />
-                  <Button layoutX="21.0" layoutY="154.0" mnemonicParsing="false" text="Fill dummy data" />
-                  <Button layoutX="21.0" layoutY="193.0" mnemonicParsing="false" text="Remove selected" />
-                  <Button layoutX="21.0" layoutY="231.0" mnemonicParsing="false" text="Add literature" />
-                  <Button layoutX="21.0" layoutY="270.0" mnemonicParsing="false" text="Edit " />
-                  <Button layoutX="21.0" layoutY="113.0" mnemonicParsing="false" text="Search by publisher" />
+                  <Button fx:id="dummyBtn" layoutX="21.0" layoutY="154.0" mnemonicParsing="false" onAction="#fillWithDummyData" text="Fill dummy data" />
+                  <Button fx:id="removeBtn" layoutX="21.0" layoutY="193.0" mnemonicParsing="false" onAction="#removeSelected" text="Remove selected" />
+                  <Button fx:id="addNewBtn" layoutX="21.0" layoutY="231.0" mnemonicParsing="false" onAction="#addNewProduct" text="Add literature" />
+                  <Button fx:id="editBtn" layoutX="21.0" layoutY="270.0" mnemonicParsing="false" onAction="#editPublication" text="Edit " />
+                  <Button fx:id="publisherBtn" layoutX="21.0" layoutY="113.0" mnemonicParsing="false" onAction="#searchByPublisher" text="Search by publisher" />
+                  <Label fx:id="Label" layoutX="30.0" layoutY="506.0" prefHeight="17.0" prefWidth="120.0" />
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
           <content>
-            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
+            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="489.0" prefWidth="406.0">
               <children>
                 <Label alignment="CENTER" font="$x1" layoutX="178.0" layoutY="14.0" style="&#10;" text="Literatures" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                        <ScrollPane layoutX="3.0" layoutY="41.0" prefHeight="508.0" prefWidth="433.0">
-                           <content>
-                              <TableView prefHeight="507.0" prefWidth="433.0">
-                                <columns>
-                                  <TableColumn prefWidth="75.0" text="C1" />
-                                  <TableColumn prefWidth="75.0" text="C2" />
-                                </columns>
-                              </TableView>
-                           </content>
-                        </ScrollPane>
+                        <TableView fx:id="tableView" onMouseClicked="#getDetails" onSort="#sortByName" prefHeight="551.0" prefWidth="443.0">
+                          <columns>
+                            <TableColumn prefWidth="168.0" text="C1" />
+                            <TableColumn prefWidth="153.0" text="C2" />
+                          </columns>
+                        </TableView>
               </children>
             </AnchorPane>
           </content>
         </ScrollPane>
         <AnchorPane>
           <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Literature details" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                  <ScrollPane layoutX="11.0" layoutY="41.0" prefHeight="509.0" prefWidth="200.0" />
+            <Label alignment="CENTER" font="$x1" layoutX="44.0" layoutY="14.0" style="&#10;" text="Literature details" textAlignment="CENTER" textFill="$x2" wrapText="false" />
+                  <TextFlow fx:id="detailsBox" layoutX="11.0" layoutY="31.0" prefHeight="506.0" prefWidth="200.0" />
           </children>
         </AnchorPane>
       </items>
@@ -121,7 +110,7 @@
             <Color blue="0.625" green="0.625" red="0.625" fx:id="x4" />
           </textFill>
         </Label>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
+        <Pane prefHeight="0.0" prefWidth="776.0" HBox.hgrow="ALWAYS" />
         <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
       </children>
       <padding>
